preparing for heroku deploy

--- a/index.html
+++ b/index.html
@@ -7,4 +7,8 @@
 </head>
 <body>
   <h1>URL.makesmall</h1>
+  <p>
+    A simple url shortener.  Use /new/url to receive a shortened link. (Replace "url" with your URL...)
+    To retreive a URL, simply enter /link, where "link" is the shortened link you received!
+  </p>
 </body>
