cleaned up landing page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>URL.makesmall</title>
+  <title>URLShortify</title>
 </head>
 <body>
-  <h1>URL.makesmall</h1>
+  <h1>URLShortify</h1>
   <p>
-    A simple url shortener.  Use /new/url to receive a shortened link. (Replace "url" with your URL...)
-    To retreive a URL, simply enter /link, where "link" is the shortened link you received!
+    A simple url shortener.  Use <code>https://urlshortify.heroku.com/new/url</code> to receive a shortened link. (Replace "url" with your URL without "https://")
+  </p>
+  <p>
+    To retreive a URL, simply enter <code>https://urlshortify.heroku.com/link</code>, where "link" is the shortened string you received!
+  </p>
+  <p>
+    A FreeCodeCamp project by <a href="dstewart1673.github.io" target="_blank">Daniel Stewart</a>
   </p>
 </body>
